Stuck fixing canvas

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,17 +39,17 @@
                       "game game game"
                       "btm-left btm-right btm-right"; 
   
+ */
  
- /*
 
   #button {
     position: relative;
     font-family: 'Kaushan Script', monospace;
     top: 210px;
     z-index: 1;
-    background-color: silver;
-    border: dotted;
-    color: gold;
+    background-color: rgb(255, 255, 255);
+    border: solid;
+    color: rgb(45, 13, 83);
     text-align: center;
     font-size: 50px;
     align-self: center;
@@ -61,9 +61,9 @@
     font-family: 'Kaushan Script', monospace;
     top: 210px;
     z-index: 1;
-    background-color: silver;
-    border: dotted;
-    color: gold;
+    background-color: rgb(255, 255, 255);
+    border: solid;
+    color: rgb(45, 13, 83);
     text-align: center;
     font-size: 30px;
     align-self: center;
@@ -84,7 +84,7 @@
     border: none;
   }
 
-  */
+  
  /*
 #canvas {
     position: absolute;
@@ -226,4 +226,12 @@ aside {
   #btm-right {
     grid-area: btm-right;
      background-color: rgb(0, 0, 0); 
+  }
+  #canvas2 {
+    background: #EEE;
+    display: block;
+    margin: 0 auto;
+    border: solid 6px #444;
+    width: 50%;
+    height: 100px;
   }
